# BroadClass

./: .env.example  .gitignore  DEBUG_VIDEO_ISSUE.md  LICENSE  MIGRATION_COMPLETE.md  NETWORK_ACCESS.md  README.md  api_flow.dio  architecture.dio  database_er.dio  docker-compose.autoscale.yml  docker-compose.hub.yml  docker-compose.yml  package-lock.json  package.json  report.md  requrements.md  webrtc_flow.dio
.claude/: settings.local.json
ai-service/: .dockerignore  Dockerfile  pyproject.toml
ai-service/app/: answer.py  chunker.py  config.py  db.py  healthcheck.py  ingest.py  lifecycle.py  logging_setup.py  main.py  moderation.py  redis_client.py  retrieval.py  security.py
ai-service/app/providers/: __init__.py  _prompts.py  answer.py  anthropic_answer.py  deepgram_stt.py  embedding.py  fakes.py  groq_answer.py  groq_moderation.py  moderation.py  openai_answer.py  openai_embedding.py  openai_moderation.py  sentence_transformers_local.py  stt.py
ai-service/app/store/: chunks.py  transcripts.py
ai-service/scripts/: query.py
ai-service/tests/: test_chunker.py  test_fakes.py  test_retrieval.py
backend/: .dockerignore  .env.example  .gitignore  BACKEND_ARCHITECTURE.md  Dockerfile  Dockerfile.edge  Dockerfile.manager  package-lock.json  package.json  project_overview.md  server.js  server.js.backup  start.sh
client/: package-lock.json  package.json
client2/: index.html  main.js  package-lock.json  package.json  styles.css  webrtc.js
frontend/: .env.example  .gitignore  FRONTEND_ARCHITECTURE.md  ca.crt  ca.key  cert.crt  cert.key  generate-cert.js  (+6 more)
(+101 files in other folders)
